Fixed a styling issue for the section element on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,12 +71,12 @@ header {
 /*Section rules*/
 section {
     margin-top: 25px;
-    margin-left: 7.5%;
-    margin-right: 7.5%;
+    margin-left: 100px;
+    margin-right: 100px;
     height: 1600px;
 }
 
-hr{
+hr {
     border-bottom: 4px solid black;
 }
 
@@ -168,6 +168,15 @@ footer {
         padding-bottom: 50px;
     }
 }
+
+/*Removes the margin to use all the screen space on small screens*/
+@media (max-width: 800px) {
+    section {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
 /*Stops the text from the boss divs leaving their assigned box*/
 @media (max-width: 1300px) {
     .spacing {
@@ -175,6 +184,7 @@ footer {
         padding-bottom: 50px;
     }
 }
+
 /*Makes the nav stack on top of eachover instead of side by side on smaller screens*/
 @media (max-width: 768px) {
     .nav {
